I made final touches to the code. I wanted to make sure that everything was aligned to the center

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -368,7 +368,7 @@
     line-height: 1.7;
 }
 .sectionfour .describe{
-    margin-left: -40%;
+    margin-left: -53%;
 }
 /* End of section Four */
 
